--- a/CaseRunnerModel/CaseRunnerModel.csproj
+++ b/CaseRunnerModel/CaseRunnerModel.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{7D93654B-5978-4922-9CC4-20DEEF9D954E}</ProjectGuid>
+    <ProjectGuid>{FD156A54-42B2-4BE1-819C-80660E9F4507}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>TestScript</RootNamespace>
-    <AssemblyName>TestScript</AssemblyName>
+    <RootNamespace>CaseRunnerModel</RootNamespace>
+    <AssemblyName>CaseRunnerModel</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <TargetFrameworkProfile />
@@ -31,9 +31,6 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="SAPAutomation">
-      <HintPath>..\..\SAPGuiAutomationLib\SAPAutomation\bin\Debug\SAPAutomation.dll</HintPath>
-    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -42,59 +39,14 @@
     <Reference Include="System.Data" />
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
-    <Reference Include="UIAutomationClient" />
-    <Reference Include="UIAutomationProvider" />
-    <Reference Include="UIAutomationTypes" />
-    <Reference Include="Young.Data">
-      <HintPath>..\..\Young\Young.Data\bin\Debug\Young.Data.dll</HintPath>
-    </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Case1\AccountModel.cs" />
-    <Compile Include="Case1\Case1DataModel.cs" />
-    <Compile Include="Case1\Case1_MTD_Analysis.cs" />
-    <Compile Include="Class1.cs" />
-    <Compile Include="DataRowExtension.cs" />
-    <Compile Include="LoginDataModel.cs" />
+    <Compile Include="CaseInfo.cs" />
+    <Compile Include="IRunner.cs" />
+    <Compile Include="StepInfo.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="UIHelper.cs" />
-    <Compile Include="Utils.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Case1_MTD_Analysis.xlsx">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </None>
-  </ItemGroup>
-  <ItemGroup>
-    <COMReference Include="SAPFEWSELib">
-      <Guid>{5EA428A0-F2B8-45E7-99FA-0E994E82B5BC}</Guid>
-      <VersionMajor>1</VersionMajor>
-      <VersionMinor>0</VersionMinor>
-      <Lcid>0</Lcid>
-      <WrapperTool>tlbimp</WrapperTool>
-      <Isolated>False</Isolated>
-      <EmbedInteropTypes>True</EmbedInteropTypes>
-    </COMReference>
-    <COMReference Include="stdole">
-      <Guid>{00020430-0000-0000-C000-000000000046}</Guid>
-      <VersionMajor>2</VersionMajor>
-      <VersionMinor>0</VersionMinor>
-      <Lcid>0</Lcid>
-      <WrapperTool>primary</WrapperTool>
-      <Isolated>False</Isolated>
-      <EmbedInteropTypes>True</EmbedInteropTypes>
-    </COMReference>
-  </ItemGroup>
-  <ItemGroup>
-    <Content Include="Case1\Accountlist.txt">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\CaseRunnerModel\CaseRunnerModel.csproj">
-      <Project>{fd156a54-42b2-4be1-819c-80660e9f4507}</Project>
-      <Name>CaseRunnerModel</Name>
-    </ProjectReference>
+    <Compile Include="TestInterface.cs" />
+    <Compile Include="WPFNotify.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
