--- a/TestScript/TestScript.csproj
+++ b/TestScript/TestScript.csproj
@@ -31,6 +31,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Microsoft.Office.Interop.Excel, Version=15.0.0.0, Culture=neutral, PublicKeyToken=71e9bce111e9429c, processorArchitecture=MSIL">
+      <EmbedInteropTypes>True</EmbedInteropTypes>
+    </Reference>
     <Reference Include="SAPAutomation">
       <HintPath>..\..\SAPGuiAutomationLib\SAPAutomation\bin\Debug\SAPAutomation.dll</HintPath>
     </Reference>
@@ -50,8 +53,11 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Attributes\ExcelFormulaAttribute.cs" />
+    <Compile Include="Attributes\ExcelStyleAttribute.cs" />
     <Compile Include="Case1\AccountModel.cs" />
     <Compile Include="Case1\Case1DataModel.cs" />
+    <Compile Include="Case1\Case1DocInfoModel.cs" />
     <Compile Include="Case1\Case1ReportDataModel.cs" />
     <Compile Include="Case1\Case1_MTD_Analysis.cs" />
     <Compile Include="Class1.cs" />
@@ -65,6 +71,7 @@
     <None Include="Case1_MTD_Analysis.xlsx">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+    <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
     <COMReference Include="SAPFEWSELib">
