--- a/CaseRunner/CaseRunner.csproj
+++ b/CaseRunner/CaseRunner.csproj
@@ -55,6 +55,7 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="Converter\BoolReverseConverter.cs" />
     <Compile Include="ProcessTest.cs" />
     <Compile Include="Utils.cs" />
     <Page Include="MainWindow.xaml">
