--- a/TestScript/TestScript.csproj
+++ b/TestScript/TestScript.csproj
@@ -51,8 +51,9 @@
     <Reference Include="UIAutomationClient" />
     <Reference Include="UIAutomationProvider" />
     <Reference Include="UIAutomationTypes" />
-    <Reference Include="Young.Data">
-      <HintPath>..\..\Github\Young\Young.Excel.Interop\bin\Debug\Young.Data.dll</HintPath>
+    <Reference Include="Young.Data, Version=1.2.0.1, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\Young\Young.Data\bin\Debug\Young.Data.dll</HintPath>
     </Reference>
     <Reference Include="Young.Excel.Interop">
       <HintPath>..\..\Github\Young\Young.Excel.Interop\bin\Debug\Young.Excel.Interop.dll</HintPath>
@@ -65,7 +66,12 @@
     <Compile Include="Case1\Case1ReportDataModel.cs" />
     <Compile Include="Case1\Case1_MTD_Analysis.cs" />
     <Compile Include="Case6\Case6DataModel.cs" />
+    <Compile Include="Case6\Case6ReportModel.cs" />
     <Compile Include="Case6\Case6_Workflow.cs" />
+    <Compile Include="Case6\EDIDSDataModel.cs" />
+    <Compile Include="Case6\EDP21DataModel.cs" />
+    <Compile Include="Case6\HRP1001DataModel.cs" />
+    <Compile Include="Case6\EDIDCDataModel.cs" />
     <Compile Include="LoginDataModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Tools.cs" />
@@ -99,6 +105,9 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Case1\Accountlist.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Case6\IDocList.txt">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
