--- a/TestScript/TestScript.csproj
+++ b/TestScript/TestScript.csproj
@@ -69,6 +69,11 @@
     <Compile Include="Case1\Case1DocInfoModel.cs" />
     <Compile Include="Case1\Case1ReportDataModel.cs" />
     <Compile Include="Case1\Case1_MTD_Analysis.cs" />
+    <Compile Include="Case4\Case4DataModel.cs" />
+    <Compile Include="Case4\Case4OutputModel.cs" />
+    <Compile Include="Case4\Case4_Parallel_Ledger_Reconcilication.cs" />
+    <Compile Include="Case4\COASDataModel.cs" />
+    <Compile Include="Case4\CSKSDataModel.cs" />
     <Compile Include="Case6\Case6DataModel.cs" />
     <Compile Include="Case6\Case6FileConfig.cs" />
     <Compile Include="Case6\Case6ReportModel.cs" />
@@ -77,6 +82,7 @@
     <Compile Include="Case6\EDP21DataModel.cs" />
     <Compile Include="Case6\HRP1001DataModel.cs" />
     <Compile Include="Case6\EDIDCDataModel.cs" />
+    <Compile Include="FileConfig.cs" />
     <Compile Include="LoginDataModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Tools.cs" />
